# Blog

./: .gitignore  .gitmodules  docker-compose.yml  后续改进.txt
.claude/: settings.local.json
BlogServer/: CMakeLists.txt  Dockerfile
BlogServer/source/: auth.h  db.h  handlers.h  main.cpp  sha256.h  voice_ws.h
BlogServer/sql/: init.sql
BlogWeb/: .env.production  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
BlogWeb/src/app/: globals.css  layout.tsx  page.tsx
BlogWeb/src/app/blog/: layout.tsx  page.tsx
BlogWeb/src/app/blog/about/: page.tsx
BlogWeb/src/app/blog/posts/[slug]/: page.tsx
BlogWeb/src/app/blog/ue/: page.tsx
BlogWeb/src/app/blog/ue/[slug]/: page.tsx
BlogWeb/src/app/test/: page.tsx
BlogWeb/src/app/voice/: page.tsx
BlogWeb/src/app/voice/lobby/: page.tsx
BlogWeb/src/app/voice/room/[roomId]/: page.tsx
BlogWeb/src/components/: BlogSidebar.tsx  EmojiCalendar.tsx  VideoBackground.tsx
BlogWeb/src/hooks/: useAudioCapture.ts  useAudioPlayer.ts  usePionSFU.ts  useSFUAudio.ts  useWebRTC.ts  useWebSocket.ts
BlogWeb/src/lib/: posts.ts  ue-projects.ts
nginx/: default.conf
